Closed
Bug 349662
Opened 20 years ago
Closed 19 years ago
Bug with 8, 16 and 32-bit unsigned integer parameters on Mac/PPC
Categories
(Core Graveyard :: Java to XPCOM Bridge, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: vkorenev, Assigned: jhpedemonte)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
|
3.99 KB,
patch
|
jhpedemonte
:
review+
mconnor
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.5) Gecko/20060802 Firefox/1.5.0.5
Build Identifier:
There is a bug when passing 8, 16 and 32-bit unsigned integer parameters from Java to XPCOM method on Mac OS X/PPC platform. The assumption that aVariant.val.i16 == aVariant.val.u8 is wrong for Mac/PPC. XPCOM method always receives 0. Please see attached patch.
Reproducible: Always
| Reporter | ||
Comment 1•20 years ago
|
||
| Reporter | ||
Comment 2•20 years ago
|
||
A test case can be taken from Bug 348710
Comment 3•20 years ago
|
||
Comment on attachment 234920 [details] [diff] [review]
Patch
Again, thanks for the patch, if you want to get it reviewed, you need to ask for review (I've done it now for you).
Attachment #234920 -
Flags: review?(jhpedemonte)
Updated•20 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 4•19 years ago
|
||
Comment on attachment 234920 [details] [diff] [review]
Patch
Looks good. I'll check this in as soon as I can (want to get some other patches in first).
Attachment #234920 -
Flags: review?(jhpedemonte) → review+
| Assignee | ||
Comment 5•19 years ago
|
||
Checked in to trunk. ->FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 6•19 years ago
|
||
Comment on attachment 234920 [details] [diff] [review]
Patch
Asking for 1.8.1 branch approval. Patch is XULRunner only.
Attachment #234920 -
Flags: approval1.8.1?
Comment 7•19 years ago
|
||
Comment on attachment 234920 [details] [diff] [review]
Patch
a=mconnor on behalf of drivers, since this is not used for Firefox
Attachment #234920 -
Flags: approval1.8.1? → approval1.8.1+
Updated•11 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•